[package]
name = "sugo"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "Simple source manager"
readme = "README.md"
documentation = "https://docs.rs/sugo"
repository = "https://github.com/morr0ne/sugo"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
anyhow = "1.0.95"
base16ct = { version = "0.2.0", features = ["std"] }
blake3 = "1.5.5"
bzip2 = "0.5.0"
camino = { version = "1.1.9", features = ["serde"] }
flate2 = "1.0.35"
indexmap = { version = "2.7.1", features = ["serde"] }
indicatif = "0.17.11"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "json",
    "http2",
    "charset",
    "rustls-tls-manual-roots-no-provider",
] }
rustls = { version = "0.23.22", features = ["brotli", "zlib"] }
rustls-platform-verifier = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
tar = "0.4.43"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utf8-chars = "3.0.5"
xz2 = "0.1.7"
